snooze everything everywhere
allows snoozing of all types of items
on all pages that have the required type of display element

--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,12 @@
 	},
 	"content_scripts": [
 		{
-			"matches": [ "https://secure.phabricator.com/" ],
+			"matches": [ "https://secure.phabricator.com/*" ],
 			"js": [ "phabricator-snooze-demo.js" ],
 			"run_at": "document_end"
 		}
 	],
 	"permissions": [
-		"https://secure.phabricator.com/"
+		"https://secure.phabricator.com/*"
 	]
 }
