--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,9 @@
 			"run_at": "document_end"
 		}
 	],
+	"web_accessible_resources": [
+		"init-datepicker.js"
+	],
 	"permissions": [
 		"https://secure.phabricator.com/*"
 	]
